LIVIJUKU-512: Käsittelijän kirjoittamasta (täydennyspyyntö)viestistä häviävät rivinvaihdot.

--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -79,8 +79,8 @@
         <strong>
           Täydennyspyyntöviesti käsittelijältä:
         </strong><br/>
-        {{hakemus.taydennyspyynto.selite}}
-        <br/><br/>
+        <p class="prewrap">{{hakemus.taydennyspyynto.selite}}</p>
+        <br/>
         <strong>
           Määräpäivä täydennykselle: {{hakemus.taydennyspyynto.maarapvm | date:'dd.MM.yyyy'}}.
         </strong>
