LIVIJUKU-562: ELY-hakemusten hakuohje

--- a/app/scripts/views/kasittelija/hakuohje-hallinta.html
+++ b/app/scripts/views/kasittelija/hakuohje-hallinta.html
@@ -6,3 +6,11 @@
     Hakuohje suurille ja keskisuurille kaupunkiseuduille</a>&nbsp;
   <juku-upload-hakuohje-button></juku-upload-hakuohje-button>
 </p>
+<p>
+  <span ng-if="!hakuohjeLadattu(hakemuskausi)" class="text-muted">
+    Hakuohje ELY-keskuksille
+  </span>
+  <a href="{{getElyHakuohjePdf(hakemuskausi.vuosi)}}" ng-if="hakuohjeLadattu(hakemuskausi)" target="_blank">
+    Hakuohje ELY-keskuksille</a>&nbsp;
+  <juku-upload-elyhakuohje-button></juku-upload-elyhakuohje-button>
+</p>
