--- a/app/scripts/views/kasittelija/elyhakuohje-upload-button.html
+++ b/app/scripts/views/kasittelija/elyhakuohje-upload-button.html
@@ -1,10 +1,10 @@
 <button class="btn btn-primary"
         ng-show="sallittu('modify-hakemuskausi')"
-        ngf-select ngf-change="uploadHakuohje($files, hakemuskausi)" accept="application/pdf" ngf-pattern=".pdf" name="hakuohje"
+        ngf-select ngf-change="uploadElyHakuohje($files, hakemuskausi)" accept="application/pdf" ngf-pattern=".pdf" name="elyhakuohje"
         data-toggle="tooltip"
         data-tooltip-trigger="mouseenter"
         data-tooltip-placement="bottom"
-        uib-tooltip="Voimassaoleva hakuohje(PDF) joukkoliikenteen valtionavustuksista">
+        uib-tooltip="Voimassaoleva hakuohje(PDF) ELY-keskusten määrärahojen hakemiseen">
   <span>
     {{ hakuohjeLadattu(hakemuskausi) ? 'Korvaa ladattu hakuohje':' Lataa hakuohje' }}
   </span>
