--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -51,7 +51,7 @@
             <h5>Hakija</h5>
             {{getHakija(hakemus)}}
           </div>
-          <div class="col-md-3" ng-if="isMaksatushakemus1() || isMaksatushakemus2()">
+          <div class="col-md-3" ng-if="isMaksatushakemus">
             <form-group label="IBAN-tilinumero" errormessage="pankkitilinumeroErrorMessage">
               <input id="pankkitilinumero" name="pankkitilinumero" type="text" class="form-control"
                      ng-model="hakemus.tilinumero"
@@ -119,13 +119,13 @@
         </juku-icon-link>
       </juku-form-row>
 
-      <juku-form-row ng-if="isMaksatushakemus2() && !hasPaatos()">
+      <juku-form-row ng-if="isMaksatushakemus2 && !hasPaatos()">
         <h5>HAETTAVISSA OLEVA AVUSTUS AJALLE 1.7. - 31.12.{{hakemus.vuosi}}</h5>
         <span ng-if="avustushakemusPaatosOlemassa()">{{haettavaAvustusMH2() | currency:"&euro;"}}</span>
         <span ng-if="!avustushakemusPaatosOlemassa()">Avustushakemuksella ei ole vielä päätöstä</span>
       </juku-form-row>
 
-      <juku-form-row ng-if="isMaksatushakemus2() && hasPaatos()">
+      <juku-form-row ng-if="isMaksatushakemus2 && hasPaatos()">
         <h5>MAKSETAAN AJALTA 1.1.-30.6.{{hakemus.vuosi}}</h5>
         {{maksatushakemus1Paatos.myonnettyavustus | currency:"&euro;"}} &nbsp;
         <juku-icon-link
@@ -137,49 +137,13 @@
         </juku-icon-link>
       </juku-form-row>
 
-      <!--juku-form-row ng-if="avustushakemusPaatosOlemassa() && isMaksatushakemus1()">
-        <h5>MYÖNNETTY AVUSTUS AJALLE {{ajankohta}}{{hakemus.vuosi}}</h5>
-        {{myonnettyAvustusPerJakso() | currency:"&euro;"}} &nbsp;
-        <juku-icon-link
-          href="{{haePaatosPdf()}}"
-          ng-show="hasPaatos(hakemus.hakemustilatunnus)"
-          title="Avaa päätös"
-          target="_blank"
-          icon="file">
-          Avaa päätös (PDF)
-        </juku-icon-link>
-      </juku-form-row>
-      <juku-form-row ng-if="maksatushakemus1PaatosOlemassa() && isMaksatushakemus2()">
-        <h5>MYÖNNETTY AVUSTUS 1. MAKSATUSHAKEMUKSEN PERUSTEELLA</h5>
-        {{maksatushakemus1PaatosMaksettu() | currency:"&euro;"}} &nbsp;
-        <juku-icon-link
-          href="{{haeMaksatushakemus1PaatosPdf()}}"
-          title="Avaa päätös"
-          target="_blank"
-          icon="file">
-          Avaa päätös (PDF)
-        </juku-icon-link>
-      </juku-form-row>
-      <juku-form-row ng-if="maksatushakemus1PaatosOlemassa() && isMaksatushakemus2()">
-        <h5>MYÖNNETTY AVUSTUS 2. MAKSATUSHAKEMUKSEN PERUSTEELLA</h5>
-        {{myonnettyAvustusPerJakso() | currency:"&euro;"}} &nbsp;
-        <juku-icon-link
-          href="{{haePaatosPdf()}}"
-          ng-show="hasPaatos(hakemus.hakemustilatunnus)"
-          title="Avaa päätös"
-          target="_blank"
-          icon="file">
-          Avaa päätös (PDF)
-        </juku-icon-link>
-      </juku-form-row-->
-
       <juku-form-row
         ng-if="!avustushakemusPaatosOlemassa() && isMaksatushakemus && haettuSummaYliMyonnetyn()"
         class="alert alert-danger">
         <strong>Virhe! </strong> Avustusta ei voi hakea maksuun, koska avustushakemuksella ei ole päätöstä.
       </juku-form-row>
       <juku-form-row
-        ng-if="avustushakemusPaatosOlemassa() && isMaksatushakemus1() && haettuSummaYliMyonnetyn()"
+        ng-if="avustushakemusPaatosOlemassa() && isMaksatushakemus1 && haettuSummaYliMyonnetyn()"
         class="alert alert-danger">
         <strong>Virhe! </strong>Haettu avustussumma ({{sumHaettavaAvustus() | currency:"&euro;"}}) ylittää ensimmäisellä
         maksatushakemuksella haettavan suurimman mahdollisen avustussumman ({{haettavaAvustusMH1() | currency:"&euro;"
@@ -189,7 +153,7 @@
         ({{myonnettyAvustusAH0() | currency:"&euro;"}} - alkuvuoden hakemuksen perusteella maksettu avustus).
       </juku-form-row>
       <juku-form-row
-        ng-if="avustushakemusPaatosOlemassa() && isMaksatushakemus2() && haettuSummaYliMyonnetyn()"
+        ng-if="avustushakemusPaatosOlemassa() && isMaksatushakemus2 && haettuSummaYliMyonnetyn()"
         class="alert alert-danger">
         <strong>Virhe! </strong>Toisen maksatushakemuksen haettava avustussumma ({{sumHaettavaAvustus() | currency:"&euro;"}})
         ei saa ylittää koko vuodelle {{hakemus.vuosi}} myönnettyä summaa ({{myonnettyAvustusAH0() | currency:"&euro;"}}
@@ -214,11 +178,11 @@
     <juku-form-section>
 
 
-      <juku-form-section ng-show="isAvustushakemus()">
+      <juku-form-section ng-show="isAvustushakemus">
         <juku-ohje-avustushakemus></juku-ohje-avustushakemus>
       </juku-form-section>
 
-      <juku-form-section ng-show="isMaksatushakemus1() || isMaksatushakemus2()">
+      <juku-form-section ng-show="isMaksatushakemus">
         <juku-ohje-maksatushakemus></juku-ohje-maksatushakemus>
       </juku-form-section>
 
