LIVIJUKU-562: ELY-hakemusten hakuohje

--- a/app/scripts/views/kasittelija/elyhakuohje-upload-button.html
+++ b/app/scripts/views/kasittelija/elyhakuohje-upload-button.html
@@ -6,6 +6,6 @@
         data-tooltip-placement="bottom"
         uib-tooltip="Voimassaoleva hakuohje (PDF) ELY-keskusten määrärahojen hakemiseen">
   <span>
-    {{ hakuohjeLadattu(hakemuskausi) ? 'Korvaa ladattu hakuohje':' Lataa hakuohje' }}
+    {{ elyhakuohjeLadattu(hakemuskausi) ? 'hakemus-tyyppi-ely':' Lataa hakuohje' }}
   </span>
 </button>
