--- a/app/scripts/views/kasittelija/hakuohje-hallinta.html
+++ b/app/scripts/views/kasittelija/hakuohje-hallinta.html
@@ -7,10 +7,10 @@
   <juku-upload-hakuohje-button></juku-upload-hakuohje-button>
 </p>
 <p>
-  <span ng-if="!hakuohjeLadattu(hakemuskausi)" class="text-muted">
+  <span ng-if="!elyhakuohjeLadattu(hakemuskausi)" class="text-muted">
     Hakuohje ELY-keskuksille
   </span>
-  <a href="{{getElyHakuohjePdf(hakemuskausi.vuosi)}}" ng-if="hakuohjeLadattu(hakemuskausi)" target="_blank">
+  <a href="{{getElyHakuohjePdf(hakemuskausi.vuosi)}}" ng-if="elyhakuohjeLadattu(hakemuskausi)" target="_blank">
     Hakuohje ELY-keskuksille</a>&nbsp;
   <juku-upload-elyhakuohje-button></juku-upload-elyhakuohje-button>
 </p>
