LIVIJUKU-646: ELY-paneeliotsikon taustavärin ja ELY-välilehden taustavärin vaihtaminen

--- a/app/scripts/components/tab/index.styl
+++ b/app/scripts/components/tab/index.styl
@@ -14,5 +14,9 @@
     margin-right 0
   &.is-selected
     background: colors.primary
+  &.is-ely-selected
+    margin-left 40px
+    background: #00aacc
   &.is-ely
     margin-left 40px
+    background: #00aacc
