--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -19,6 +19,7 @@
         ng-repeat="tyyppi in constants.hakemustyypit"
         ng-if="hakemustyyppiSaatavilla(tyyppi)"
         selected="isTabSelected(tyyppi)"
+        ely="elyTyyppi(tyyppi)"
         ng-click="toApplication(tyyppi)">
         {{ tyyppi | toApplicationName }}
       </juku-tab>
