--- a/app/scripts/components/tab/index.styl
+++ b/app/scripts/components/tab/index.styl
@@ -16,7 +16,6 @@
     background: colors.primary
   &.is-ely-selected
     margin-left 40px
-    background: #00aacc
+    background: #00aacc !important
   &.is-ely
     margin-left 40px
-    background: #00aacc
