--- a/app/scripts/components/seuranta/lippu/index.html
+++ b/app/scripts/components/seuranta/lippu/index.html
@@ -1,16 +1,17 @@
 <form id="{{(kaupunkilippu ? 'kaupunki' : 'seutu') + '-lippusuoritteet-form'}}" name="suoritteetForm">
   <div class="table-responsive">
     <table class="table table-hover table-condensed">
-      <tr>
-        <th class="col-md-2">{{kaupunkilippu ? "Kaupunkiliput" : "Seutulippu"}}</th>
-        <th>Myynti (kpl)</th>
-        <th>Matkat (kpl)</th>
-        <th>Asiakashinta</th>
-        <th>Lipuilla tehtyjen matkojen keskipituus</th>
-        <th>Lipputulot yhteensä</th>
-        <th>Valtion ja kuntien rahoitus yhteensä</th>
-        <th ng-hide="isReadonly()">Toiminnot</th>
-      </tr>
+      <thead>
+        <tr>
+          <th class="col-md-2">{{kaupunkilippu ? "Kaupunkiliput" : "Seutulippu"}}</th>
+          <th>Myynti (kpl)</th>
+          <th>Matkat (kpl)</th>
+          <th>Asiakashinta</th>
+          <th>Lipuilla tehtyjen matkojen keskipituus</th>
+          <th>Lipputulot yhteensä</th>
+          <th>Valtion ja kuntien rahoitus yhteensä</th>
+          <th ng-hide="isReadonly()">Toiminnot</th>
+        </tr>
       </thead>
       <tfoot ng-if="suoritteet.length > 0">
         <tr>
