--- a/app/scripts/views/hakemus/avustuskohteet.html
+++ b/app/scripts/views/hakemus/avustuskohteet.html
@@ -39,7 +39,7 @@
 
   </juku-avustusluokka-panel>
 
-  <div class="row">
+  <div class="row korostus">
     <div class="col-md-9">
       <h4>
         {{ hakemus.hakemustyyppitunnus === 'AH0' ?
