--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -296,5 +296,10 @@ textarea
   padding-top: 28px;
   font-weight: 600;
   text-align: right
+
 .prewrap
   white-space: pre-wrap;
+
+.korostus
+  border: 1px solid #ccc
+  padding: 10px
