LIVIJUKU-654: Avustus- ja maksatushakemukset: "Haettava valtionavustus / Haettavat maksatukset yhteensä"-rivin korostaminen

--- a/app/scripts/views/hakemus/ely-forms.html
+++ b/app/scripts/views/hakemus/ely-forms.html
@@ -7,7 +7,7 @@
   <h3>KEHITTÄMISHANKKEIDEN ERITTELY HANKKEITTAIN</h3>
   <juku-ely-kehittamishankkeet kehittamishankkeet="kehittamishankkeet"
                                is-readonly="!hakemusTallentaminenEnabled()"></juku-ely-kehittamishankkeet>
-  <div class="row">
+  <div class="row korostus">
     <div class="col-md-9">
       <h4>HAETTAVA VALTIONAVUSTUS YHTEENSÄ:</h4>
     </div>
