LIVIJUKU-657: Avustus- ja maksatushakemukset: "Olen liiittänyt hakemukseen..."-rivin korostaminen

--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -219,7 +219,7 @@
       </div>
 
       <!-- Hakija -->
-      <juku-confirmation
+      <juku-confirmation class="korostus"
         ng-show="!isELYhakemus && isHakija(user) && isOmaHakemus(user) && hakemusKeskenerainen()"
         ng-model="allekirjoitusliitetty"
         ng-disabled="!hakemusKeskenerainen() || !liitteetOlemassa()">
